# todoist-organizer

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
src/todoist_organizer/: __init__.py  cli.py  client.py  config.py  llm.py
src/todoist_organizer/commands/: bump.py  label.py
tests/: __init__.py
